벤딩머신 앱 HTML/CSS/JAVASCRIPT

--- a/index.html
+++ b/index.html
@@ -13,48 +13,51 @@
 
 <body>
   <header>
-    <img src="./images/logo.png" alt="">
+    <img src="https://github.com/D-Sup/BendingmachineApp/blob/main/images/logo.png?raw=true" alt="">
   </header>
   <main>
     <article class="left-wrapper">
       <section class="container">
         <div class="items item-01" data-id="0">
-          <img src="./images/can-red.png" alt="오리지널 콜라 이미지">
+          <img src="https://github.com/D-Sup/BendingmachineApp/blob/main/images/can-red.png?raw=true" alt="오리지널 콜라 이미지">
           <h2 class="name">Original_Cola</h2>
           <p class="price">1000원</p>
           <span class="remain a11y-hidden"></span>
           <div class="sold"></div>
         </div>
         <div class="items item-02" data-id="1">
-          <img src="./images/can-violet.png" alt="보라색 콜라 이미지">
+          <img src="https://github.com/D-Sup/BendingmachineApp/blob/main/images/can-violet.png?raw=true"
+            alt="보라색 콜라 이미지">
           <h2 class="name">Violet_Cola</h2>
           <p class="price">1000원</p>
           <span class="remain a11y-hidden"></span>
           <div class="sold"></div>
         </div>
         <div class="items item-03" data-id="2">
-          <img src="./images/can-yellow.png" alt="노란색 콜라 이미지">
+          <img src="https://github.com/D-Sup/BendingmachineApp/blob/main/images/can-yellow.png?raw=true"
+            alt="노란색 콜라 이미지">
           <h2 class="name">Yellow_Cola</h2>
           <p class="price">1000원</p>
           <span class="remain a11y-hidden"></span>
           <div class="sold"></div>
         </div>
         <div class="items item-04" data-id="3">
-          <img src="./images/can-blue.png" alt="쿨색 콜라 이미지">
+          <img src="https://github.com/D-Sup/BendingmachineApp/blob/main/images/can-blue.png?raw=true" alt="쿨색 콜라 이미지">
           <h2 class="name">Cool_Cola</h2>
           <p class="price">1000원</p>
           <span class="remain a11y-hidden"></span>
           <div class="sold"></div>
         </div>
         <div class="items item-05" data-id="4">
-          <img src="./images/can-green.png" alt="초록색 콜라 이미지">
+          <img src="https://github.com/D-Sup/BendingmachineApp/blob/main/images/can-green.png?raw=true"
+            alt="초록색 콜라 이미지">
           <h2 class="name">Green_Cola</h2>
           <p class="price">1000원</p>
           <span class="remain a11y-hidden"></span>
           <div class="sold"></div>
         </div>
         <div class="items item-06" data-id="5">
-          <img src="./images/can-orange.png" alt="오렌">
+          <img src="https://github.com/D-Sup/BendingmachineApp/blob/main/images/can-orange.png?raw=true" alt="오렌">
           <h2 class="name">Orange_Cola</h2>
           <p class="price">1000원</p>
           <span class="remain a11y-hidden"></span>
